tests/expectations/parser/functions/const_input_fail.out
Error [EPAR0370047]: expected parameter name
    --> test:3:16
     |
   3 |     function x(const x: u8) -> u8 {}
     |                ^^^^^
